--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
   body{
     background-color: brown;
   }
-  h1{
-    color: aquamarine;
-  }
 </style>
 <h1>Heading 1</h1>
 <h2>Heading 2</h2>
@@ -29,3 +26,7 @@
 <p>A paragraph with<br />line break</p>
 <img src="image/A-Fei.jpg" />
 <img src="image/A-Fei.jpg">
+<a href="https://nightfeather.github.io/workshop2018/index_CH.html"
+   title="下一頁"
+   target="_blank">Index Page</a>
+
