--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     background-color: brown;
   }
 </style>
-<h1>Heading 1</h1>
+<h1>名字的由來</h1>
 <h2>Heading 2</h2>
 <h3>Heading 3</h3>
 <h4>Heading 4</h4>
@@ -28,5 +28,5 @@
 <img src="image/A-Fei.jpg">
 <a href="https://nightfeather.github.io/workshop2018/index_CH.html"
    title="下一頁"
-   target="_blank">Index Page</a>
+   target="_blank">下一頁</a>
 
