--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>It Works!</title>
   </head>
   <body>
     <div>
-      <h1>It Works!!</h1>
     </div>
   </body>
 </html>
 <style>
   body{
-    background-color: brown;
+    background-color: aliceblue;
   }
 </style>
-<h1>名字的由來</h1>
-<h2>Heading 2</h2>
-<h3>Heading 3</h3>
-<h4>Heading 4</h4>
-<h5>Heading 5</h5>
-<h6>Heading 6</h6>
+<h1>柴犬</h1>
+<p>白的      黑的      黃的</p>
+
+<img src="http://www.twgreatdaily.com/imgs/image/15/1578770.jpg" />
+<img src="http://link.photo.pchome.com.tw/s12/xz108833/10/132827469587/">
 
 <p>This is a single paragraph</p>
 
 <p>A paragraph with<br />line break</p>
-<img src="image/A-Fei.jpg" />
-<img src="image/A-Fei.jpg">
+
 <a href="https://nightfeather.github.io/workshop2018/index_CH.html"
    title="下一頁"
    target="_blank">下一頁</a>
