--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     background-color: aliceblue;
   }
 </style>
-<h1>柴犬</h1>
-<p>白的      黑的      黃的</p>
-
-<img src="http://www.twgreatdaily.com/imgs/image/15/1578770.jpg" />
-<img src="http://link.photo.pchome.com.tw/s12/xz108833/10/132827469587/">
-
-<p>This is a single paragraph</p>
-
-<p>A paragraph with<br />line break</p>
-
-<a href="https://nightfeather.github.io/workshop2018/index_CH.html"
+<h1> <font size="7"><font face="微軟正黑體">柴犬</font></font></h1>
+<img src="https://cdn.buzzbooklet.com/content/480e52ac63e21e62a5305e9600263efc.jpg">
+<p><font size="7"><font face="微軟正黑體">忠心</font></font></font></p>
+<img src="http://reso3.yiihuu.com/img_1100620.jpg"width="716" height="478">
+<p><font size="7"><font face="微軟正黑體">煞氣</font></font></p>
+<img src="https://static.ettoday.net/images/777/d777576.jpg"width="500" height="700">
+<p><font size="7"><font face="微軟正黑體">可愛</font></font></p>
+<img src="http://gooden.link/image/Document/201512141705517306.jpg">
+<p><font size="7"><font face="微軟正黑體">傻</font></font></p>
+<img src="https://static.ettoday.net/images/2426/d2426661.jpg">
+<br><a href="https://nightfeather.github.io/workshop2018/index_CH.html"
    title="下一頁"
-   target="_blank">下一頁</a>
+   target="">下一頁</a>
 
