--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
     background-color: aliceblue;
   }
 </style>
-<h1> <font size="7"><font face="微軟正黑體">狗是人類最好的朋友</font></font></h1>
+<h1> <font size="7"><font face="微軟正黑體">狗</font></font></h1>
 <img src="https://cdn.buzzbooklet.com/content/480e52ac63e21e62a5305e9600263efc.jpg">
-<p><font size="5"><font face="微軟正黑體">忠心</font></font></font></p>
-<img src="https://truth.bahamut.com.tw/s01/201512/cea6c41e34b62b839068eff70ca8093e.JPG">
-<p><font size="5"><font face="微軟正黑體">帥氣</font></font></p>
-<img src="https://truth.bahamut.com.tw/s01/201512/1337ef8d2ca3e6d74ae77be2408cb966.JPG">
-<p><font size="5"><font face="微軟正黑體">可愛</font></font></p>
-<img src="https://truth.bahamut.com.tw/s01/201512/ce7d27d9a69008cd322aeccba6c1e44a.JPG">
-<p><font size="5"><font face="微軟正黑體">傻傻的</font></font></p>
+<p><font size="7"><font face="微軟正黑體"><b>忠心</b></font></font></font></p>
+<img src="http://reso3.yiihuu.com/img_1100620.jpg"width="716" height="478">
+<p><font size="7"><font face="微軟正黑體"><b>煞氣</b></font></font></p>
+<img src="https://static.ettoday.net/images/777/d777576.jpg"width="500" height="700">
+<p><font size="7"><font face="微軟正黑體"><b>可愛</b></font></font></p>
+<img src="http://gooden.link/image/Document/201512141705517306.jpg">
+<p><font size="7"><font face="微軟正黑體"><b>笨笨的</b></font></font></p>
 <img src="https://static.ettoday.net/images/2426/d2426661.jpg">
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<p><font size="7"><font face="微軟正黑體"><font color="red"><b>注意事項!</b></font></font></font></p>
+<br><p><font size="5"><font face="微軟正黑體"><font color="red"><b>(1)禁止餵食甜食    (2)不要太常洗澡    (3)要帶狗繩出門    (4)食物飲食要控制</b></font></font></font></p><p>
 
 <br><a href="https://nightfeather.github.io/workshop2018/index_CH.html"
    title="下一頁"
    target="">下一頁</a>
-
