--- a/index.html
+++ b/index.html
@@ -2,30 +2,38 @@
 <html>
   <head>
   </head>
+  <!-- <style>
+  img {
+   float:right;
+  }
+   </style> -->
+
   <body>
-    <div>
-    </div>
+    <center>
+    <h1> <font size="7"><font face="微軟正黑體">狗</font></font></h1>
+    <img src="https://cdn.buzzbooklet.com/content/480e52ac63e21e62a5305e9600263efc.jpg">
+    <p><font size="7"><font face="微軟正黑體"><b>忠心</b></font></font></font></p>
+    <img src="http://reso3.yiihuu.com/img_1100620.jpg"width="716" height="478">
+    <p><font size="7"><font face="微軟正黑體"><b>煞氣</b></font></font></p>
+    <img src="https://static.ettoday.net/images/777/d777576.jpg"width="500" height="700">
+    <p><font size="7"><font face="微軟正黑體"><b>可愛</b></font></font></p>
+    <img src="http://gooden.link/image/Document/201512141705517306.jpg">
+    <p><font size="7"><font face="微軟正黑體"><b>笨笨的</b></font></font></p>
+    <img src="https://static.ettoday.net/images/2426/d2426661.jpg">
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <p><font size="7"><font face="微軟正黑體"><font color="red"><b>養狗注意事項!</b></font></font></font></p>
+    <br><p><font size="5"><font face="微軟正黑體"><font color="red"><b>(1)禁止餵食甜食    (2)不要太常洗澡    (3)要帶狗繩出門    (4)食物飲食要控制</b></font></font></font></p><p>
+    
+    <br><a href="https://nightfeather.github.io/workshop2018/index_CH.html"
+      title="下一頁"
+      target="">下一頁</a>
+      
+    </center>
   </body>
 </html>
+
 <style>
   body{
     background-color: aliceblue;
   }
 </style>
-<h1> <font size="7"><font face="微軟正黑體">狗</font></font></h1>
-<img src="https://cdn.buzzbooklet.com/content/480e52ac63e21e62a5305e9600263efc.jpg">
-<p><font size="7"><font face="微軟正黑體"><b>忠心</b></font></font></font></p>
-<img src="http://reso3.yiihuu.com/img_1100620.jpg"width="716" height="478">
-<p><font size="7"><font face="微軟正黑體"><b>煞氣</b></font></font></p>
-<img src="https://static.ettoday.net/images/777/d777576.jpg"width="500" height="700">
-<p><font size="7"><font face="微軟正黑體"><b>可愛</b></font></font></p>
-<img src="http://gooden.link/image/Document/201512141705517306.jpg">
-<p><font size="7"><font face="微軟正黑體"><b>笨笨的</b></font></font></p>
-<img src="https://static.ettoday.net/images/2426/d2426661.jpg">
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<p><font size="7"><font face="微軟正黑體"><font color="red"><b>注意事項!</b></font></font></font></p>
-<br><p><font size="5"><font face="微軟正黑體"><font color="red"><b>(1)禁止餵食甜食    (2)不要太常洗澡    (3)要帶狗繩出門    (4)食物飲食要控制</b></font></font></font></p><p>
-
-<br><a href="https://nightfeather.github.io/workshop2018/index_CH.html"
-   title="下一頁"
-   target="">下一頁</a>
