--- a/serval_cat.html
+++ b/serval_cat.html
@@ -7,7 +7,7 @@
 
       body {
         font-size: 20px;
-        overflow: hidden;
+        overflow-x: hidden;
       }
 
       .container {
@@ -47,15 +47,84 @@
         font-size: 0.8em;
       }
 
-      .well {
-        position: fixed;
-        top: -200px;
-        right: -200px;
-        transform: rotateZ(-45deg);
+      @keyframes peeking-locate {
+        0% {
+          left: 0px;
+          right: unset;
+          top: unset;
+          bottom: 0px;
+          transform: translate(-40%, 30%);
+        }
+        25% {
+          left: unset;
+          right: 0px;
+          transform: rotateY(180deg) translate(-40%, 30%);
+        }
+        50% {
+          top: 0px;
+          bottom: unset;
+          right: 0px;
+          transform: rotateX(180deg) rotateY(180deg) translate(-40%, 30%);
+        }
+        75% {
+          top: 0px;
+          bottom: unset;
+          left: 0px;
+          right: unset;
+          transform: rotateX(180deg) translate(-40%, 30%);
+        }
       }
 
-      .well:hover img:before{
-        content: 'たーのしー';
+      @keyframes peeking-run {
+        0% {
+          transform: translateX(-100%);
+        }
+        50% {
+          transform: translateX(100%);
+        }
+        100% {
+          transform: translateX(-100%);
+        }
+      }
+
+      @keyframes peeking-turn {
+        40% {
+          transform: rotateY(0deg);
+        }
+        60% {
+          transform: rotateY(180deg);
+        }
+        100% {
+          transform: rotateY(180deg);
+        }
+      }
+
+      .serval-pop {
+        position: fixed;
+        bottom: 0px;
+        left: 0px;
+        animation: peeking-locate 8s infinite step-end;
+        transform: translate(-40%, 30%);
+      }
+
+      .serval-pop .serval-run {
+        display: flex;
+        -moz-box-flex: 1;
+        -webkit-box-flex: 1;
+        width: 300px;
+        animation: peeking-run 2s infinite ease-in-out;
+      }
+
+      .serval-pop .serval-run img {
+        animation: peeking-turn 2s infinite ease-in-out;
+      }
+
+      .serval-run::before {
+        position: absolute;
+        display: block;
+        right: -3em;
+        top: 50%;
+        content: 'たのしー';
       }
 
     </style>
@@ -97,8 +166,10 @@
           <span>距離也可達 3.6 公尺</span>
         </div>
       </section>
-      <div class="well">
-        <img src="https://i.imgur.com/DnhU6W0.png" alt="">
+      <div class="serval-pop">
+        <div class="serval-run">
+          <img src="https://i.imgur.com/2WxxqOr.png" alt="">
+        </div>
       </div>
     </article>
   </body>
