--- a/serval_cat.html
+++ b/serval_cat.html
@@ -2,16 +2,39 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>極度友趣</title>
     <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+      }
 
       body {
         font-size: 20px;
-        overflow-x: hidden;
+        overflow: hidden;
+      }
+
+      h1 { margin: 0; }
+
+      .vid {
+        position: absolute;
+        left: 0;
+        right: 0;
+        width: 100vw;
+        height: 100vh;
+        z-index: -2;
+      }
+
+      .vid iframe {
+        width: 100%;
+        height: 100%;
       }
 
       article#main {
+        height: 100vh;
         width: 100vw;
+        background-color: rgba(255, 255, 255, 0.5);
       }
 
       .container {
@@ -113,6 +136,7 @@
 
       .serval-pop .serval-run {
         display: flex;
+        display: -webkit-flex;
         -moz-box-flex: 1;
         -webkit-box-flex: 1;
         width: 300px;
@@ -134,6 +158,13 @@
     </style>
   </head>
   <body>
+    <div class="vid">
+        <iframe src="https://www.youtube.com/embed/xkMdLcB_vNU?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=1"
+                frameborder="0"
+                allow="autoplay; encrypted-media"
+                allowfullscreen>
+        </iframe>
+    </div>
     <article id="main">
       <div class="container">
         <header>
@@ -142,7 +173,7 @@
         <h2>簡介</h2>
         <section class="lol">
           <div class="picbox">
-            <a href="https://images.plurk.com/2wL4jFVUFpaCmI0WIOEi.jpg">
+            <a href="https://images.plurk.com/2wL4jFVUFpaCmI0WIOEi.jpg" target="_blank">
               <img src="https://images.plurk.com/2wL4jFVUFpaCmI0WIOEi.jpg" alt="" />
             </a>
             <div class="reference">
