--- a/serval_cat.html
+++ b/serval_cat.html
@@ -143,11 +143,14 @@
         display: -webkit-flex;
         -moz-box-flex: 1;
         -webkit-box-flex: 1;
+
+        align-items: flex-start;
         width: 300px;
         animation: peeking-run 2s infinite ease-in-out;
       }
 
       .serval-pop .serval-run img {
+        width: 100%;
         animation: peeking-turn 2s infinite ease;
       }
 
