--- a/serval_cat.html
+++ b/serval_cat.html
@@ -34,6 +34,8 @@
       article#main {
         height: 100vh;
         width: 100vw;
+        box-sizing: border-box;
+        padding: 1em;
         background-color: rgba(255, 255, 255, 0.5);
       }
 
