--- a/serval_cat.html
+++ b/serval_cat.html
@@ -125,7 +125,7 @@
           transform: rotateY(0deg);
         }
         50% {
-          transform: rotateY(180deg);
+          transform: rotateY(180deg) rotateZ(-40deg);
         }
         100% {
           transform: rotateY(180deg);
