--- a/serval_cat.html
+++ b/serval_cat.html
@@ -121,14 +121,20 @@
       }
 
       @keyframes peeking-turn {
-        30% {
-          transform: rotateY(0deg);
+        30% { /*start turn*/
+          transform: rotate3d(0,0,0,180deg);
         }
-        50% {
-          transform: rotateY(180deg) rotateZ(-40deg);
+        50% { /*turn complete, momentum kicks in*/
+          transform: rotate3d(-0.22,1,0,180deg);
         }
-        100% {
-          transform: rotateY(180deg);
+        60% { /* momentum 0 */
+          transform: rotate3d(-0.25,1,0,180deg);
+        }
+        70% {
+          transform: rotate3d(0,1,0,180deg);
+        }
+        95% {
+          transform: rotate3d(0,1,0,180deg);
         }
       }
 
