--- a/serval_cat.html
+++ b/serval_cat.html
@@ -4,173 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>極度友趣</title>
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-      }
-
-      body {
-        font-size: 20px;
-        overflow: hidden;
-      }
-
-      h1 { margin: 0; }
-
-      .vid {
-        position: absolute;
-        left: 0;
-        right: 0;
-        width: 100vw;
-        height: 100vh;
-        z-index: -2;
-      }
-
-      .vid iframe {
-        width: 100%;
-        height: 100%;
-      }
-
-      article#main {
-        height: 100vh;
-        width: 100vw;
-        box-sizing: border-box;
-        padding: 1em;
-        background-color: rgba(255, 255, 255, 0.5);
-      }
-
-      .container {
-        width: 60%;
-        margin: 0 auto;
-      }
-
-      header {
-        width: 100%;
-      }
-
-      header a {
-        margin: 0 auto;
-      }
-
-      .lol, .hunting {
-        display: flex;
-        flex-direction: row;
-      }
-      section:hover {
-        background-color: rgba(255, 255, 255, 0.5);
-      }
-
-      .description {
-        padding: 1em;
-        box-sizing: border-box;
-      }
-      .picbox {
-        display: box;
-        box-flex: 1;
-        width: 300px;
-      }
-
-      .picbox img { width: 100%; }
-
-      .picbox .reference {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
-        align-items: center;
-        font-size: 0.8em;
-      }
-
-      @keyframes peeking-locate {
-        0% {
-          left: 0px;
-          right: unset;
-          top: unset;
-          bottom: 0px;
-          transform: translate(-40%, 30%);
-        }
-        25% {
-          left: unset;
-          right: 0px;
-          transform: rotateY(180deg) translate(-40%, 30%);
-        }
-        50% {
-          top: 0px;
-          bottom: unset;
-          right: 0px;
-          transform: rotateX(180deg) rotateY(180deg) translate(-40%, 30%);
-        }
-        75% {
-          top: 0px;
-          bottom: unset;
-          left: 0px;
-          right: unset;
-          transform: rotateX(180deg) translate(-40%, 30%);
-        }
-      }
-
-      @keyframes peeking-run {
-        0% {
-          transform: translateX(-100%);
-        }
-        60% {
-          transform: translateX(200%);
-        }
-        100% {
-          transform: translateX(-100%);
-        }
-      }
-
-      @keyframes peeking-turn {
-        30% { /*start turn*/
-          transform: rotate3d(0,0,0,180deg);
-        }
-        50% { /*turn complete, momentum kicks in*/
-          transform: rotate3d(-0.22,1,0,180deg);
-        }
-        60% { /* momentum 0 */
-          transform: rotate3d(-0.25,1,0,180deg);
-        }
-        70% {
-          transform: rotate3d(0,1,0,180deg);
-        }
-        95% {
-          transform: rotate3d(0,1,0,180deg);
-        }
-      }
-
-      .serval-pop {
-        position: fixed;
-        bottom: 0px;
-        left: 0px;
-        animation: peeking-locate 8s infinite step-end;
-        transform: translate(-40%, 30%);
-      }
-
-      .serval-pop .serval-run {
-        display: flex;
-        display: -webkit-flex;
-        -moz-box-flex: 1;
-        -webkit-box-flex: 1;
-
-        align-items: flex-start;
-        width: 300px;
-        animation: peeking-run 2s infinite ease-in-out;
-      }
-
-      .serval-pop .serval-run img {
-        width: 100%;
-        animation: peeking-turn 2s infinite ease;
-      }
-
-      .serval-run::before {
-        position: absolute;
-        display: block;
-        right: -3em;
-        top: 50%;
-        content: 'たのしー';
-      }
-
-    </style>
+    <link rel="stylesheet" href="serval-cat.css">
+    <link rel="stylesheet" href="serval-run.css">
   </head>
   <body>
     <div class="vid">
