--- a/index.html
+++ b/index.html
@@ -1,52 +1,48 @@
 <!DOCTYPE html>
 <html>
   <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <style>
+        body{
+          background-color: aliceblue;
+        }
+      </style>
   </head>
   
   <body>
- 
-        <div class="container">
-            <div class="col">
-              <div class="row-sm">
-                  <p style="font-size:2rem" class="text-justify"><font face="微軟正黑體" ><b>狗</b></font></font></p>
-                  <img src="https://cdn.buzzbooklet.com/content/480e52ac63e21e62a5305e9600263efc.jpg"class="img-fluid" alt="Responsive image">
-              </div>
-              <div class="row-sm">
-                  <p style="font-size:2rem" class="text-justify"><font face="微軟正黑體"><b>忠心</b></font></font></p>
-                  <img src="http://reso3.yiihuu.com/img_1100620.jpg"class="img-fluid" alt="Responsive image">
-              </div>
-              <div class="row-sm">
-                  <p style="font-size:2rem" class="text-justify"><font face="微軟正黑體"><b>煞氣</b></font></p>
-                  <img src="https://static.ettoday.net/images/777/d777576.jpg" class="img-fluid" alt="Responsive image">
-              </div>
-              <div class="row-sm">
-                  <p style="font-size:2rem" class="text-justify"><font face="微軟正黑體"><b>可愛</b></font></p>
-                  <img src="http://gooden.link/image/Document/201512141705517306.jpg"class="img-fluid" alt="Responsive image">
-              </div>
-              <div class="row-sm">
-                  <p style="font-size:2rem" class="text-justify"><font face="微軟正黑體"><b>笨笨的</b></font></p>
-                   <img src="https://static.ettoday.net/images/2426/d2426661.jpg"class="img-fluid" alt="Responsive image">
-              </div>
-              <div class="row-sm">
-                  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                  <p style="font-size:3rem" class="text-justify"><font face="微軟正黑體"><font color="red"><b>養狗注意事項!</b></font></font></font></p>
-              </div>
-              <div class="row-sm">
-                  <br><p style="font-size:2rem" class="text-justify"><font face="微軟正黑體"><font color="red"><b>(1)禁止餵食甜食    (2)不要太常洗澡    (3)要帶狗繩出門    (4)食物飲食要控制</b></font></font></font></p><p>
-    
-                  <br><a href="https://nightfeather.github.io/workshop2018/index_CH.html"
-                  title="下一頁"
-                  target="">下一頁</a>
-                </div>
-            </div>
-          </div>
+    <div class="container">
+      <div class="col">
+        <div class="row-sm">
+          <p style="font-size:2rem" class="text-justify"><font face="微軟正黑體" ><b>狗</b></font></font></p>
+          <img src="https://cdn.buzzbooklet.com/content/480e52ac63e21e62a5305e9600263efc.jpg"class="img-fluid" alt="Responsive image">
+        </div>
+        <div class="row-sm">
+          <p style="font-size:2rem" class="text-justify"><font face="微軟正黑體"><b>忠心</b></font></font></p>
+          <img src="http://reso3.yiihuu.com/img_1100620.jpg"class="img-fluid" alt="Responsive image">
+        </div>
+        <div class="row-sm">
+          <p style="font-size:2rem" class="text-justify"><font face="微軟正黑體"><b>煞氣</b></font></p>
+          <img src="https://static.ettoday.net/images/777/d777576.jpg" class="img-fluid" alt="Responsive image">
+        </div>
+        <div class="row-sm">
+          <p style="font-size:2rem" class="text-justify"><font face="微軟正黑體"><b>可愛</b></font></p>
+          <img src="http://gooden.link/image/Document/201512141705517306.jpg"class="img-fluid" alt="Responsive image">
+        </div>
+        <div class="row-sm">
+          <p style="font-size:2rem" class="text-justify"><font face="微軟正黑體"><b>笨笨的</b></font></p>
+          <img src="https://static.ettoday.net/images/2426/d2426661.jpg"class="img-fluid" alt="Responsive image">
+        </div>
+        <div class="row-sm">
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <p style="font-size:3rem" class="text-justify"><font face="微軟正黑體"><font color="red"><b>養狗注意事項!</b></font></font></font></p>
+        </div>
+        <div class="row-sm">
+          <br><p style="font-size:2rem" class="text-justify"><font face="微軟正黑體"><font color="red"><b>(1)禁止餵食甜食    (2)不要太常洗澡    (3)要帶狗繩出門    (4)食物飲食要控制</b></font></font></font></p><p>
 
+          <br><a class="btn btn-primary" href="https://nightfeather.github.io/workshop2018/index_CH.html" role="button">下一頁</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
 
-<style>
-  body{
-    background-color: aliceblue;
-  }
-</style>
