Add neighbor links

--- a/serval_cat.html
+++ b/serval_cat.html
@@ -56,6 +56,14 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="container">
+          <ul>
+            <li><a href="index.html"><span>隔壁</span></a></li>
+            <li><a href="index_CH.html"><span>隔壁</span></a></li>
+          </ul>
+        </div>
+      </footer>
     </article>
   </body>
 </html>
