--- a/serval_cat.html
+++ b/serval_cat.html
@@ -59,8 +59,8 @@
       <footer>
         <div class="container">
           <ul>
-            <li><a href="index.html"><span>隔壁</span></a></li>
-            <li><a href="index_CH.html"><span>隔壁</span></a></li>
+            <li><a target="_blank" href="index.html"><span>隔壁</span></a></li>
+            <li><a target="_blank" href="index_CH.html"><span>隔壁</span></a></li>
           </ul>
         </div>
       </footer>
